<resources>
    <string name="app_name">SAGY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search...</string>
    <string name="check_adopted_villages">Check Adopted Villages</string>
    <string name="choose_constituency">Choose Constituency</string>
    <string name="village_name">Village name</string>
    <string name="tahshil_block">Tahshil/block</string>
    <string name="thashil_name">thashil name</string>
    <string name="more_info">More Info</string>
    <string name="mp_name">Mp name</string>
    <string name="DummyText">Something</string>
    <string name="work_in_progress">Work In Progress</string>
    <string name="more">More</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="residence">Residence</string>
    <string name="constituency">Constituency</string>
    <string name="state">State</string>
    <string name="village_adopted">Village Adopted :</string>
    <string name="sansad_adrash_gram">SANSAD ADRASH GRAM</string>
    <string name="yojana">YOJANA</string>
    <string name="sagy">(SAGY)</string>
    <string-array name="language">
        <item>English</item>
        <item>Hindi</item>
        <item>Punjabi</item>
    </string-array>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>
