<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ipo"
    tools:context="dynamicdrillers.sagy.SplashScreenActivity">

    <LinearLayout
        android:layout_marginLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sansad_adrash_gram"
        android:textSize="20sp"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:textColor="@android:color/white"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/yojana"
        android:textSize="23sp"

        android:textStyle="bold"
        android:layout_margin="5dp"
        android:gravity="center"
        android:textColor="@android:color/white"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:text="@string/sagy"
        android:textSize="27sp"
        android:gravity="center"
        android:textColor="@android:color/white"/>

    </LinearLayout>


</RelativeLayout>
