<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dynamicdrillers.sagy.SearchVillagesActivity">

    <include layout="@layout/simple_toolbar_with_back_button"  android:id="@+id/simple_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/state_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="Choose State"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/state_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/district_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/choose_constituency"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="25sp" />

        <Spinner
            android:enabled="false"
            android:id="@+id/district_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/check_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/title2"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/check_adopted_villages"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:elevation="200dp"
            android:translationZ="20dp"
            android:transformPivotX="20dp"
            android:layout_margin="20dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.5">

                    <TextView
                        android:id="@+id/village_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/village_name"
                        android:textAlignment="center"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="22dp" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.5">

                    <TextView
                        android:id="@+id/tahshil"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/tahshil_block"
                        android:textAlignment="center"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="22dp" />

                    <TextView
                        android:id="@+id/tahshil_name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/thashil_name"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="22dp" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Adopted By"
                        android:textAlignment="center"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="22dp" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.5">

                    <TextView
                        android:id="@+id/mp_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mp_name"
                        android:textAlignment="center"
                        android:textColor="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="22dp" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                       android:layout_marginLeft="20dp"
                        android:background="@drawable/title2"
                        android:text="@string/more_info"
                        android:textColor="@color/common_google_signin_btn_text_dark_default"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</LinearLayout>
