<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dynamicdrillers.sagy.MemberProfileActivity">

    <include layout="@layout/simple_toolbar_with_back_button" android:id="@+id/mp_info_toolbar"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@drawable/gradient_background"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mp_info_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:padding="15dp"
                android:src="@drawable/common_google_signin_btn_icon_dark_normal"
                />

            <TextView
                android:id="@+id/mp_info_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/DummyText"
                android:gravity="center"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:elevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/village_adopted"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>


                    <TextView
                        android:id="@+id/mp_info_adopted_village"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/DummyText"
                        android:textAlignment="textStart"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        tools:ignore="RtlCompat"
                        android:alpha="0.8"/>


                </LinearLayout>



            </android.support.v7.widget.CardView>




        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardElevation="10dp"
            android:layout_margin="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:padding="7dp"
                    android:gravity="center"
                    android:text="@string/date_of_birth"
                    android:textColor="@android:color/white"
                    android:background="@color/purple"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/mp_info_dob"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/DummyText"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardElevation="10dp"
            android:elevation="200dp"
            android:layout_margin="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="textStart"
                    android:padding="7dp"
                    android:text="@string/residence"
                    android:textColor="@android:color/white"
                    android:background="@color/lightblue"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/mp_info_residence"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/DummyText"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardElevation="10dp"
            android:elevation="200dp"
            android:layout_margin="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="textStart"
                    android:padding="7dp"
                    android:text="@string/constituency"
                    android:textColor="@android:color/white"
                    android:background="@color/purple"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/mp_info_constituency"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/DummyText"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardElevation="10dp"
            android:elevation="200dp"
            android:layout_margin="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="textStart"
                    android:padding="7dp"
                    android:text="@string/state"
                    android:textColor="@android:color/white"
                    android:background="@color/lightblue"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />
                <TextView
                    android:id="@+id/mp_info_state"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/DummyText"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardElevation="10dp"
            android:elevation="200dp"
            android:layout_margin="10dp"
            >



                <TextView
                    android:id="@+id/mp_info_party"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/DummyText"
                    android:textColor="@android:color/white"
                    android:background="@color/green"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"/>




        </android.support.v7.widget.CardView>

    </LinearLayout>


</RelativeLayout>
